# richard4231.github.io

./: .gitignore  CLAUDE.md  LICENSE  README.md  _config.yml  bak  combo.css  index.html  index.md  package-lock.json  package.json  wuerfel.html
.claude/: settings.local.json
04 Exploding Sierpinski 64 cam/: Generator.jl  index.html
20-04-jellybears/: sketch.js
20-12-radargraphRGMU/: sketch.js
20-radargraphBPA/: sketch.js
21-05-xplodingsierpinski/: sketch.js
21-09-radargraphdigitalmedia/: sketch.js
21-pascaltriangleoptimized/: sketch.js
22-09-PiPaths-v03-3D/: sketch.js
22-09-Spikey-v02/: sketch.js
22-09-v02cavalieri/: sketch.js
22-09-v1tournesol/: index.html  sketch.js
22-10-FractionFractalsv01/: sketch.js
22-12-clickable-surfaces-v01/: sketch.js
23-02-gcf-and-lcm-v01/: sketch.js
23-03-binary-code-game/: sketch.js
24-11-exploding-cubes/: index.html  sketch.js
25-01-diceroller/: index.html
25-02-3ddicebox/: index.html
25-02-Spikey-v03 copy/: index.html  sketch.js
docs/: README.md  (+8 more)
slms1/backend/: .env.example  pyproject.toml
slms1/backend/alembic/: env.py
slms1/backend/app/: __init__.py  config.py  main.py
slms1/backend/app/api/v1/: router.py
slms1/backend/app/api/v1/endpoints/: admin.py  assessments.py  auth.py  learning_opportunities.py  lecturers.py  modules.py  rooms.py  schedules.py  students.py
slms1/backend/app/db/: session.py
slms1/backend/app/models/: __init__.py  academic.py  assessment.py  audit.py  base.py  learning_opportunity.py  lecturer.py  payment.py  registration.py  schedule.py  student.py  user.py
(+242 files in other folders)
